Add Bing background

--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary">
+
+    <ImageView
+        android:id="@+id/bing_pic_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"/>
+
 
     <ScrollView
         android:id="@+id/weather_layout"
@@ -11,6 +17,14 @@
         android:layout_height="match_parent"
         android:scrollbars="none"
         android:overScrollMode="never">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:fitsSystemWindows="true">
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,5 +37,9 @@
             <include layout="@layout/aqi"/>
             <include layout="@layout/suggestion"/>
         </LinearLayout>
+
+        </LinearLayout>
     </ScrollView>
+
+
 </FrameLayout>
